# nbody-simulation

./: CMakeLists.txt  README.md
include/: body.h  config.h  data.h  opencl_setup.h  setup.h
src/: kernel.cl  main.c  opencl_setup.c  save  setup.c
